Enjoy improvements to compiler-bridge's build definition

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ notifications:
     - joshua.suereth@typesafe.com
 
 script:
-  - git clone https://github.com/Duhemm/compiler-bridge.git compiler-bridge && cd compiler-bridge && sbt +publishLocal && cd ..
+  - git clone https://github.com/Duhemm/compiler-bridge.git compiler-bridge && cd compiler-bridge && sbt publishBridge && cd ..
   - sbt -J-XX:ReservedCodeCacheSize=128m "$SCRIPTED_TEST"
 
   # Tricks to avoid unnecessary cache updates
